--- a/templates/shared/base.html
+++ b/templates/shared/base.html
@@ -15,9 +15,9 @@
           integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
           crossorigin="anonymous">
     {# custom css #}
-    <link rel="stylesheet" href="{% static 'custom.css' %}">
+    <link rel="stylesheet" href="{% static 'css/custom.css' %}">
     {# js links #}
-    <script src="{% static 'custom.js' %}" defer></script>
+    <script src="{% static 'js/main.js' %}" defer></script>
     {% block header_scripts %}
 
     {% endblock %}
