19-created like button with ajax-2
request.is_ajax() didnt work and i used request.POST :/

--- a/templates/shared/base.html
+++ b/templates/shared/base.html
@@ -30,7 +30,7 @@
     {% endblock %}
 </div>
 {#bootsrap bundle with poper#}
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"></script>
+{#<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"></script>#}
 {#jquery#}
 <script src="https://code.jquery.com/jquery-3.6.3.min.js"
         integrity="sha256-pvPw+upLPUjgMXY0G+8O0xUf+/Im1MZjXxxgOcBQBXU="
