--- a/templates/shared/base.html
+++ b/templates/shared/base.html
@@ -7,7 +7,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     {#favicon#}
-    {#    <link rel="icon" type="image/png" href="">#}
+    <link rel="icon" type="image/png" href="{% static 'favicon.ico' %}">
 
     {#bootstrap#}
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
@@ -25,6 +25,8 @@
 </head>
 <body>
 <div class="container mt-3">
+    {% include 'shared/nav.html' %}
+
     {% block content %}
 
     {% endblock %}
