--- a/templates/posts/detail_post.html
+++ b/templates/posts/detail_post.html
@@ -8,8 +8,8 @@
 {% block title %}{{ post.title }} details{% endblock %}
 {% block content %}
     <button id="back-btn" class="btn btn-info">back to posts</button>
-    <button id="update-btn" class="btn btn-primary">update</button>
-    <button id="delete-btn" class="btn btn-danger">delete</button>
+    <button id="update-btn" class="btn btn-primary not-visible">update</button>
+    <button id="delete-btn" class="btn btn-danger not-visible">delete</button>
     <div id="spinner-box">
         <div class="d-flex justify-content-center">
             <div class="spinner-border" role="status">
