--- a/templates/shared/nav.html
+++ b/templates/shared/nav.html
@@ -11,6 +11,7 @@
                 <a class="nav-link active" aria-current="page"
                    href="{% url 'post-list' %}">Home</a>
                 <a class="nav-link active" href="{% url 'posts' %}">posts</a>
+                <a class="nav-link active" href="/admin/">admin panel</a>
             </div>
         </div>
     </div>
