--- a/templates/posts/detail_post.html
+++ b/templates/posts/detail_post.html
@@ -1,15 +1,85 @@
 {% extends 'shared/base.html' %}
 {% load static %}
+{% load crispy_forms_tags %}
 
 {% block header_scripts %}
     <script src="{% static 'js/detail_post.js' %}" defer></script>
     {#    <script src="/static/js/detail_post.js"></script>#}
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
+          rel="stylesheet"
+          integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
+          crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+            crossorigin="anonymous"></script>
 {% endblock %}
 {% block title %}{{ post.title }} details{% endblock %}
 {% block content %}
+
+    <!-- deleteModal -->
+    <div class="modal fade" id="deleteModal" tabindex="-1" aria-labelledby="deleteModalLabel"
+         aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="deleteModalLabel">delete post</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal"
+                            aria-label="Close">
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <p>are you sure to delete <b>{{ post.title }}</b>?!</p>
+                    <form method="post" id="delete-form">
+                        {% csrf_token %}
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-danger"
+                                    data-bs-dismiss="modal">Close
+                            </button>
+                            <button type="submit" class="btn btn-success">delete</button>
+                        </div>
+                    </form>
+                </div>
+
+            </div>
+        </div>
+    </div>
+    <!-- updateModal -->
+    <div class="modal fade" id="updateModal" tabindex="-1" aria-labelledby="updateModalLabel"
+         aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="updateModalLabel">update post</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal"
+                            aria-label="Close">
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <div class="alert-box"></div>
+                    <form method="post" id="update-form">
+                        {% csrf_token %}
+                        {{ form | crispy }}
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-danger"
+                                    data-bs-dismiss="modal">Close
+                            </button>
+                            <button type="submit" class="btn btn-success">update</button>
+                        </div>
+                    </form>
+                </div>
+
+            </div>
+        </div>
+    </div>
+
+    <!-- Button trigger modal -->
     <button id="back-btn" class="btn btn-info">back to posts</button>
-    <button id="update-btn" class="btn btn-primary not-visible">update</button>
-    <button id="delete-btn" class="btn btn-danger not-visible">delete</button>
+    <button id="update-btn" class="btn btn-primary not-visible" data-bs-toggle="modal"
+            data-bs-target="#updateModal">update
+    </button>
+    <button id="delete-btn" class="btn btn-danger not-visible" data-bs-toggle="modal"
+            data-bs-target="#deleteModal">delete
+    </button>
     <div id="spinner-box">
         <div class="d-flex justify-content-center">
             <div class="spinner-border" role="status">
