--- a/templates/posts/detail_post.html
+++ b/templates/posts/detail_post.html
@@ -55,7 +55,7 @@
                     </button>
                 </div>
                 <div class="modal-body">
-                    <div class="alert-box"></div>
+                    <div id="alert-box"></div>
                     <form method="post" id="update-form">
                         {% csrf_token %}
                         {{ form | crispy }}
