--- a/templates/posts/detail_post.html
+++ b/templates/posts/detail_post.html
@@ -88,9 +88,74 @@
         </div>
     </div>
     <div class="mt-1" id="post-box"></div>
+
+    <!-- carousel-->
+    {% if post.get_photos %}
+        <div id="carouselExampleControls" class="carousel slide mb-4 mt-4"
+             data-bs-ride="carousel">
+            <div class="carousel-inner">
+                {% for image in post.get_photos %}
+                    {#                    {% if forloop.counter == 1 %}active{% endif %} #}
+                    <div class="carousel-item {% if forloop.first %}active{% endif %} ">
+                        <img src="{{ image.image.url }}" class="d-block w-100"
+                             alt="{{ image }}">
+                    </div>
+                {% endfor %}
+            </div>
+            {% if post.get_photos|length > 1 %}
+                <button class="carousel-control-prev" type="button"
+                        data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button"
+                        data-bs-target="#carouselExampleControls" data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
+                </button>
+            {% endif %}
+        </div>
+    {% else %}
+        <div class="mt-2 mb-2">there is no photo to show</div>
+    {% endif %}
+    <!-- end carousel-->
     {#    {{ post.id }}#}
     {#    <hr>#}
     {#    {{ post.body }}#}
+
+    {#    --------------#}
+
+    {#    <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">#}
+    {#        <div class="carousel-indicators">#}
+    {#            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0"#}
+    {#                    class="active" aria-current="true" aria-label="Slide 1"></button>#}
+    {#            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"#}
+    {#                    aria-label="Slide 2"></button>#}
+    {#            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"#}
+    {#                    aria-label="Slide 3"></button>#}
+    {#        </div>#}
+    {#        <div class="carousel-inner">#}
+    {#            <div class="carousel-item active">#}
+    {#                <img src="..." class="d-block w-100" alt="...">#}
+    {#            </div>#}
+    {#            <div class="carousel-item">#}
+    {#                <img src="..." class="d-block w-100" alt="...">#}
+    {#            </div>#}
+    {#            <div class="carousel-item">#}
+    {#                <img src="..." class="d-block w-100" alt="...">#}
+    {#            </div>#}
+    {#        </div>#}
+    {#        <button class="carousel-control-prev" type="button"#}
+    {#                data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">#}
+    {#            <span class="carousel-control-prev-icon" aria-hidden="true"></span>#}
+    {#            <span class="visually-hidden">Previous</span>#}
+    {#        </button>#}
+    {#        <button class="carousel-control-next" type="button"#}
+    {#                data-bs-target="#carouselExampleIndicators" data-bs-slide="next">#}
+    {#            <span class="carousel-control-next-icon" aria-hidden="true"></span>#}
+    {#            <span class="visually-hidden">Next</span>#}
+    {#        </button>#}
+    {#    </div>#}
 {% endblock %}
 {% block footer_scripts %}
 
