36-add drop zone(js) to project and add-post-div

--- a/templates/posts/posts(main).html
+++ b/templates/posts/posts(main).html
@@ -3,7 +3,7 @@
 {% load crispy_forms_tags %}
 
 {% block header_scripts %}
-    {#    <script src="{% static 'js/custom.js' %}" defer></script>#}
+{#    <link rel="stylesheet" href="{% static 'css/custom.css' %}">#}
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
           rel="stylesheet"
           integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
@@ -19,7 +19,7 @@
 {% block content %}
     <div class="row">
         <div id="alert-box"></div>
-        <!-- Modal -->
+        <!-- add post Modal -->
         <div class="modal fade" id="addPostModal" tabindex="-1" aria-labelledby="exampleModalLabel"
              aria-hidden="true">
             <div class="modal-dialog">
@@ -41,6 +41,12 @@
                                 <button type="submit" class="btn btn-success">add</button>
                             </div>
                         </form>
+                        <form action="/upload" class="dropzone dz">
+                            {% csrf_token %}
+                            <div class="fallback">
+                                <input type="file" name="file" multiple/>
+                            </div>
+                        </form>
                     </div>
 
                 </div>
@@ -51,7 +57,7 @@
                 data-bs-target="#addPostModal">
             add post
         </button>
-        <!-- next -->
+        <!-- end post modal -->
         <div id="post-box">
 
         </div>
