--- a/templates/shared/base.html
+++ b/templates/shared/base.html
@@ -18,6 +18,11 @@
     <link rel="stylesheet" href="{% static 'css/custom.css' %}">
     {# js links #}
     <script src="{% static 'js/main.js' %}" defer></script>
+    <!-- dropzone -->
+    <script src="https://unpkg.com/dropzone@5/dist/min/dropzone.min.js" defer></script>
+    <link rel="stylesheet" href="https://unpkg.com/dropzone@5/dist/min/dropzone.min.css"
+          type="text/css"/>
+    <!-- end dropzone -->
     {% block header_scripts %}
 
     {% endblock %}
