--- a/templates/posts/posts(main).html
+++ b/templates/posts/posts(main).html
@@ -41,7 +41,7 @@
                                 <button type="submit" class="btn btn-success">add</button>
                             </div>
                         </form>
-                        <form action="/upload" class="dropzone dz">
+                        <form action="image-upload" class="dropzone dz">
                             {% csrf_token %}
                             <div class="fallback">
                                 <input type="file" name="file" multiple/>
