--- a/templates/posts/posts(main).html
+++ b/templates/posts/posts(main).html
@@ -3,7 +3,7 @@
 {% load crispy_forms_tags %}
 
 {% block header_scripts %}
-{#    <link rel="stylesheet" href="{% static 'css/custom.css' %}">#}
+    {#    <link rel="stylesheet" href="{% static 'css/custom.css' %}">#}
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
           rel="stylesheet"
           integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
@@ -26,7 +26,8 @@
                 <div class="modal-content">
                     <div class="modal-header">
                         <h5 class="modal-title" id="exampleModalLabel">create post</h5>
-                        <button type="button" class="btn-close" data-bs-dismiss="modal"
+                        <button type="button" class="btn-close add-modal-close"
+                                data-bs-dismiss="modal"
                                 aria-label="Close">
                         </button>
                     </div>
@@ -35,20 +36,21 @@
                             {% csrf_token %}
                             {{ form | crispy }}
                             <div class="modal-footer">
-                                <button type="button" class="btn btn-danger"
+                                <button type="button" class="btn btn-danger add-modal-close"
                                         data-bs-dismiss="modal">Close
                                 </button>
-                                <button type="submit" class="btn btn-success">add</button>
+                                <button type="submit" id="add-btn"
+                                        class="btn btn-success">add
+                                </button>
                             </div>
                         </form>
-                        <form action="image-upload" class="dropzone dz">
+                        <form action="image-upload" id="my-dz" class="dropzone dz not-visible">
                             {% csrf_token %}
                             <div class="fallback">
                                 <input type="file" name="file" multiple/>
                             </div>
                         </form>
                     </div>
-
                 </div>
             </div>
         </div>
