40-improve codes for logical errors implementing

--- a/templates/posts/detail_post.html
+++ b/templates/posts/detail_post.html
@@ -73,7 +73,7 @@
     </div>
 
     <!-- Button trigger modal -->
-    <button id="back-btn" class="btn btn-info">back to posts</button>
+    <a href="{% url 'posts' %}" id="back-btn" class="btn btn-info">back to posts</a>
     <button id="update-btn" class="btn btn-primary not-visible" data-bs-toggle="modal"
             data-bs-target="#updateModal">update
     </button>
