42-edit profile view template and url

--- a/templates/shared/nav.html
+++ b/templates/shared/nav.html
@@ -12,6 +12,7 @@
                    href="{% url 'post-list' %}">Home</a>
                 <a class="nav-link active" href="{% url 'posts' %}">posts</a>
                 <a class="nav-link active" href="/admin/">admin panel</a>
+                <a class="nav-link active" href="{% url 'dashboard_profile' %}">dashboard</a>
             </div>
         </div>
     </div>
