--- a/templates/profile/main_user_profile.html
+++ b/templates/profile/main_user_profile.html
@@ -1,9 +1,23 @@
 {% extends 'shared/base.html' %}
+{% load static %}
+{% load crispy_forms_tags %}
+
+{% block header_scripts %}
+    {#    <link rel="stylesheet" href="{% static 'css/custom.css' %}">#}
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
+          rel="stylesheet"
+          integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
+          crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+            crossorigin="anonymous"></script>
+    <script src="{% static 'js/profile.js' %}" defer></script>
+{% endblock %}
+
 {% block title %}
     profile dashboard
 {% endblock %}
 {% block content %}
-    {% include 'shared/nav.html' %}
     <div>
         <p>profile</p>
     </div>
