--- a/templates/shared/base.html
+++ b/templates/shared/base.html
@@ -29,7 +29,7 @@
     <title>{% block title %}title{% endblock %}</title>
 </head>
 <body>
-<div class="container mt-3">
+<div class="container mt-3 mb-3">
     {% include 'shared/nav.html' %}
 
     {% block content %}
