--- a/templates/shared/nav.html
+++ b/templates/shared/nav.html
@@ -13,6 +13,9 @@
                 <a class="nav-link active" href="{% url 'posts' %}">posts</a>
                 <a class="nav-link active" href="/admin/">admin panel</a>
                 <a class="nav-link active" href="{% url 'dashboard_profile' %}">dashboard</a>
+                {% if request.user.is_authenticated %}
+                    <a class="nav-link active" href="{% url 'logout' %}">exit</a>
+                {% endif %}
             </div>
         </div>
     </div>
